ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/CnP_PaaS__CnPData__c.object-meta.xml
<CustomObject>
    <label>C&amp;P  Data</label>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>C&amp;P Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C&amp;P  Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>