ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__CnPDataID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnPDataID__c</fullName>
    <label>CnP Data ID</label>
    <type>AutoNumber</type>
</CustomField>