ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Installed_Apps__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Installed_Apps__c</fullName>
    <label>Installed Apps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>