ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Message__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>