ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>