ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Previous_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Previous_Error_Message__c</fullName>
    <label>Previous Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>