ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Previous_Transaction_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Previous_Transaction_Created_Date__c</fullName>
    <label>Previous C&amp;P Data Created Date</label>
    <type>DateTime</type>
</CustomField>