ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Rollup_Update__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Rollup_Update__c</fullName>
    <label>Rollup Update</label>
    <length>2</length>
    <type>Text</type>
</CustomField>