ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Send_Autoresponder__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Send_Autoresponder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Matching Autoresponder(s)</label>
    <type>Checkbox</type>
</CustomField>