ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__StatusID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__StatusID__c</fullName>
    <label>Status ID</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>