ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/fields/CnP_PaaS__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Transaction_Date__c</fullName>
    <label>Transaction Date/Time</label>
    <type>DateTime</type>
</CustomField>