ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnPData__c/listViews/CnP_PaaS__Authorized.listView-meta.xml
<ListView>
    <fullName>CnP_PaaS__Authorized</fullName>
    <columns>NAME</columns>
    <columns>CnP_PaaS__OrderNumber__c</columns>
    <columns>CnP_PaaS__Contact__c</columns>
    <columns>CnP_PaaS__Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CnP_PaaS__Total_Charged__c</columns>
    <columns>CnP_PaaS__StatusID__c</columns>
    <columns>CnP_PaaS__Transaction_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CnP_PaaS__Transaction_Result__c</field>
        <operation>notEqual</operation>
        <value>Declined</value>
    </filters>
    <label>Authorized</label>
</ListView>